--- a/Main/ThronefallMP.csproj
+++ b/Main/ThronefallMP.csproj
@@ -11,12 +11,16 @@
     <Title>Thronefall Multiplayer</Title>
     <Authors>Rikhardur Bjarni Einarsson (BadWolf)</Authors>
     <Copyright>All rights reserved</Copyright>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all" />
     <PackageReference Include="BepInEx.Unity" Version="6.0.0-*" IncludeAssets="compile" />
     <PackageReference Include="BepInEx.PluginInfoProps" Version="1.*" />
+    <PackageReference Include="LiteNetLib" Version="1.1.0" />
+    <PackageReference Include="MonoMod.Common" Version="22.6.3.1" />
+    <PackageReference Include="MonoMod.RuntimeDetour.HookGen" Version="22.7.31.1" />
 	<PackageReference Include="UnityEngine.Modules" Version="2022.3.0" IncludeAssets="compile" />
   </ItemGroup>
   
@@ -27,6 +31,15 @@
   <ItemGroup>
     <Reference Include="Assembly-CSharp">
       <HintPath>..\lib\Assembly-CSharp.dll</HintPath>
+    </Reference>
+    <Reference Include="AstarPathfindingProject">
+      <HintPath>..\lib\AstarPathfindingProject.dll</HintPath>
+    </Reference>
+    <Reference Include="MMHOOK_Assembly-CSharp">
+      <HintPath>..\lib\MMHOOK_Assembly-CSharp.dll</HintPath>
+    </Reference>
+    <Reference Include="Rewired_Core">
+      <HintPath>..\lib\Rewired_Core.dll</HintPath>
     </Reference>
   </ItemGroup>
 </Project>
