Sync coins, assign ids to build slots and only show interactibles for local player

--- a/Main/ThronefallMP.csproj
+++ b/Main/ThronefallMP.csproj
@@ -41,5 +41,8 @@
     <Reference Include="Rewired_Core">
       <HintPath>..\lib\Rewired_Core.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.TextMeshPro">
+      <HintPath>..\lib\Unity.TextMeshPro.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
