--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,8 @@ Desktop.ini
 
 lib/Assembly-CSharp.dll
 lib/AstarPathfindingProject.dll
+lib/MoreMountains.Feedbacks.dll
 lib/Rewired_Core.dll
+lib/MPUIKit.dll
 lib/Unity.TextMeshPro.dll
+lib/UnityEngine.UI.dll
