--- a/Main/ThronefallMP.csproj
+++ b/Main/ThronefallMP.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="MonoMod.Common" Version="22.6.3.1" />
     <PackageReference Include="MonoMod.RuntimeDetour.HookGen" Version="22.7.31.1" />
 	<PackageReference Include="UnityEngine.Modules" Version="2022.3.0" IncludeAssets="compile" />
+	<PackageReference Include="UniverseLib.Mono" Version="1.5.1" />
   </ItemGroup>
   
   <ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
