Add the whole UI, new landmass above the tutorial one for accessing it and some bugfixes.

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,8 @@ Thumbs.db
 Desktop.ini
 .DS_Store
 
+install.cfg
+
 lib/Assembly-CSharp.dll
 lib/AstarPathfindingProject.dll
 lib/MoreMountains.Feedbacks.dll
