--- a/Main/ThronefallMP.csproj
+++ b/Main/ThronefallMP.csproj
@@ -55,4 +55,8 @@
       <HintPath>..\lib\UnityEngine.UI.dll</HintPath>
     </Reference>
   </ItemGroup>
+  
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="powershell.exe -NonInteractive -executionpolicy Unrestricted -file $(SolutionDir)\install.ps1 $(SolutionDir) $(OutDir)" />
+  </Target>
 </Project>
