--- a/Main/ThronefallMP.csproj
+++ b/Main/ThronefallMP.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="BepInEx.Unity" Version="6.0.0-*" IncludeAssets="compile" />
     <PackageReference Include="BepInEx.PluginInfoProps" Version="1.*" />
     <PackageReference Include="LiteNetLib" Version="1.1.0" />
+    <PackageReference Include="Mono.Nat" Version="3.0.4" />
     <PackageReference Include="MonoMod.Common" Version="22.6.3.1" />
     <PackageReference Include="MonoMod.RuntimeDetour.HookGen" Version="22.7.31.1" />
 	<PackageReference Include="UnityEngine.Modules" Version="2022.3.0" IncludeAssets="compile" />
