Added skeleton for Steamworks Matchmaking and WIP Lobby Browser

--- a/Main/ThronefallMP.csproj
+++ b/Main/ThronefallMP.csproj
@@ -36,6 +36,9 @@
     <Reference Include="AstarPathfindingProject">
       <HintPath>..\lib\AstarPathfindingProject.dll</HintPath>
     </Reference>
+    <Reference Include="com.rlabrecque.steamworks.net">
+      <HintPath>..\lib\com.rlabrecque.steamworks.net.dll</HintPath>
+    </Reference>
     <Reference Include="MMHOOK_Assembly-CSharp">
       <HintPath>..\lib\MMHOOK_Assembly-CSharp.dll</HintPath>
     </Reference>
@@ -55,6 +58,12 @@
       <HintPath>..\lib\UnityEngine.UI.dll</HintPath>
     </Reference>
   </ItemGroup>
+  
+  <ItemGroup>
+    <None Remove="Assets\lock-icon.png" />
+    <EmbeddedResource Include="Assets\lock-icon.png" />
+  </ItemGroup>
+  
   
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
     <Exec Command="powershell.exe -NonInteractive -executionpolicy Unrestricted -file $(SolutionDir)\install.ps1 $(SolutionDir) $(OutDir)" />
