Fix some initialization issues when hosting

--- a/.gitignore
+++ b/.gitignore
@@ -40,5 +40,6 @@ lib/AstarPathfindingProject.dll
 lib/MoreMountains.Feedbacks.dll
 lib/Rewired_Core.dll
 lib/MPUIKit.dll
+lib/ShapesRuntime.dll
 lib/Unity.TextMeshPro.dll
 lib/UnityEngine.UI.dll
