Coins, Building, reorganizing and bugfixes
Buildings require server confirmation before building
Treasury UI never crashes
If balance goes negative we try and cancel outstanding interactions to go positive again
Fix all extra coins getting spawned
Move packets under Network/Packets
Unregister player from vanilla PlayerManager when identifier is disabled
Change IPacket to BasePacket to provide sane defaults
Move ShouldPropagate and CanHandle to BasePacket
Fix Buffer being 1 byte off
Establish a 2 stage approval process for new players
Fix some issues with Player positions when spawning (still a single issue when initially spawning in LevelSelect)

--- a/.gitignore
+++ b/.gitignore
@@ -35,11 +35,5 @@ Desktop.ini
 
 install.cfg
 
-lib/Assembly-CSharp.dll
-lib/AstarPathfindingProject.dll
-lib/MoreMountains.Feedbacks.dll
-lib/Rewired_Core.dll
-lib/MPUIKit.dll
-lib/ShapesRuntime.dll
-lib/Unity.TextMeshPro.dll
-lib/UnityEngine.UI.dll
+lib/*
+!lib/MMHOOK_Assembly-CSharp.dll
