--- a/Main/ThronefallMP.csproj
+++ b/Main/ThronefallMP.csproj
@@ -14,6 +14,14 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+    <OutputPath>..\bin\Main\Debug\</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+    <OutputPath>..\bin\Main\Release\</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all" />
     <PackageReference Include="BepInEx.Unity" Version="6.0.0-*" IncludeAssets="compile" />
@@ -64,6 +72,10 @@
   <ItemGroup>
     <None Remove="Assets\lock-icon.png" />
     <EmbeddedResource Include="Assets\lock-icon.png" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <Folder Include="NetworkPackets\Game\" />
   </ItemGroup>
   
   
