General bugfixes and build script changes
Added some more null checks
Removed packet propogation from ClientSync packets
Check current level of building when approving build requests
Copy pdbs to plugin folder for better stacktraces

--- a/Main/ThronefallMP.csproj
+++ b/Main/ThronefallMP.csproj
@@ -20,6 +20,7 @@
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
     <OutputPath>..\bin\Main\Release\</OutputPath>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
 
   <ItemGroup>
