Added crown next to owner of server.

--- a/Main/ThronefallMP.csproj
+++ b/Main/ThronefallMP.csproj
@@ -73,6 +73,8 @@
   <ItemGroup>
     <None Remove="Assets\lock-icon.png" />
     <EmbeddedResource Include="Assets\lock-icon.png" />
+    <None Remove="Assets\crown.png" />
+    <EmbeddedResource Include="Assets\crown.png" />
   </ItemGroup>
   
   
