Moved texture loading to a central place and fixed weapon icons in weapon dialog

--- a/Main/ThronefallMP.csproj
+++ b/Main/ThronefallMP.csproj
@@ -73,6 +73,8 @@
     <EmbeddedResource Include="Assets\lock-icon.png" />
     <None Remove="Assets\crown.png" />
     <EmbeddedResource Include="Assets\crown.png" />
+    <None Remove="Assets\blank.png" />
+    <EmbeddedResource Include="Assets\blank.png" />
   </ItemGroup>
   
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
