--- a/Main/ThronefallMP.csproj
+++ b/Main/ThronefallMP.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net472</TargetFramework>
     <AssemblyName>com.badwolf.thronefall_mp</AssemblyName>
     <Description>Multiplayer mod for Thronefall</Description>
-    <Version>0.2.1</Version>
+    <Version>1.0.0</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
     <PackageId>Thronefall Multiplayer</PackageId>
@@ -28,7 +28,7 @@
     <PackageReference Include="BepInEx.Core" Version="5.*" />
     <PackageReference Include="BepInEx.PluginInfoProps" Version="1.*" />
     <PackageReference Include="UnityEngine.Modules" Version="2022.3.0" IncludeAssets="compile" />
-	<PackageReference Include="UniverseLib.Mono" Version="1.5.1" />
+    <PackageReference Include="UniverseLib.Mono" Version="1.5.1" />
   </ItemGroup>
   
   <ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
@@ -76,8 +76,8 @@
     <None Remove="Assets\blank.png" />
     <EmbeddedResource Include="Assets\blank.png" />
   </ItemGroup>
-  
+
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="powershell.exe -NonInteractive -executionpolicy Unrestricted -file $(SolutionDir)\install.ps1 $(SolutionDir) $(OutDir)" />
+    <Exec Command="powershell.exe -NonInteractive -executionpolicy Unrestricted -file $(SolutionDir)\install.ps1 $(SolutionDir) $(OutDir)&#xA;powershell.exe -NonInteractive -executionpolicy Unrestricted -file $(SolutionDir)\package.ps1 $(SolutionDir) $(OutDir) $(ConfigurationName)" />
   </Target>
 </Project>
